# icepuff-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  format.sh  lint.sh  test.sh  vcpkg.json
.github/workflows/: ci.yaml
cmake/: icypuff-config.cmake.in  version.h.in
examples/: CMakeLists.txt
examples/demo/: CMakeLists.txt  demo.cpp
include/icypuff/: blob.h  blob_metadata.h  compression_codec.h  file_metadata.h  file_metadata_parser.h  format_constants.h  icypuff.h  icypuff_reader.h  icypuff_writer.h  input_file.h  local_input_file.h  local_output_file.h  macros.h  output_file.h  position_output_stream.h  result.h  seekable_input_stream.h  version.h
scripts/: build.sh  format.sh  lint.sh  test.sh
src/: blob.cpp  blob_metadata.cpp  file_metadata.cpp  file_metadata_parser.cpp  icypuff.cpp  icypuff_reader.cpp  icypuff_writer.cpp  local_input_file.cpp  local_output_file.cpp
tests/: file_metadata_parser_test.cpp  hello_world_test.cpp  icypuff_reader_test.cpp  icypuff_writer_test.cpp  test_resources.h
